# rust-sat

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benches.rs  lib.rs  naive.rs  nonchro.rs  watch.rs
benches/benches/: mod.rs
src/: lib.rs  main.rs  naive.rs  nonchro.rs  parse.rs  watch.rs
src_other/: lib.rs  main.rs  naive.rs  nonchro.rs  parse.rs
tests/: naive.rs  nonchro.rs  parse.rs  satsolver.rs  tests.rs  watch.rs
tests/satsolver/: mod.rs
