[package]
name = "sat"
version = "0.0.1"
authors = ["michaelbeaumont <mjboamail@gmail.com>"]

[lib]
name = "sat"
path = "src/lib.rs"

[[bin]]
name = "rust-sat"
path = "src/main.rs"

[[test]]
name = "tests"

[[bench]]
name = "benches"

[dependencies]
log="*"
env_logger="*"
glob="*"
vec_map="*"
bit-set="*"
docopt="*"
rustc-serialize="*"
