[package]
name = "sat"
version = "0.0.2"
authors = ["michaelbeaumont <mjboamail@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.5"
env_logger = "0.5.13"
glob = "0.3"
vec_map = "0.8.1"
bit-set = "0.5.0"
docopt = "1.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sat_bench"
path = "benches/lib.rs"
harness = false
